--- a/src/main/resources/com/example/databasejavafx/insertWindow.fxml
+++ b/src/main/resources/com/example/databasejavafx/insertWindow.fxml
@@ -32,9 +32,9 @@
         </HBox>
         <TableView fx:id="tvList" prefHeight="200.0" prefWidth="200.0">
             <columns>
-                <TableColumn fx:id="tcID" prefWidth="75.0" text="ID"/>
-                <TableColumn fx:id="tcName" prefWidth="75.0" text="Name"/>
-                <TableColumn fx:id="tcWohnort" prefWidth="75.0" text="Wohnort"/>
+                <TableColumn fx:id="idColumn" prefWidth="75.0" text="ID"/>
+                <TableColumn fx:id="nameColumn" prefWidth="75.0" text="Name"/>
+                <TableColumn fx:id="wohnortColumn" prefWidth="75.0" text="Wohnort"/>
             </columns>
         </TableView>
     </children>
